--- a/Olympiad/app/src/main/res/layout/activity_register_b.xml
+++ b/Olympiad/app/src/main/res/layout/activity_register_b.xml
@@ -54,7 +54,8 @@
             android:id="@+id/regIV"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:layout_height="280dp" />
+        android:layout_height="280dp"
+        android:layout_marginBottom="24dp" />
 
 
     <TextView
@@ -65,7 +66,7 @@
         android:id="@+id/uploadHint"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="#999999" />
+        android:textColor="#ccc" />
 
     <Spinner
             android:layout_width="match_parent"
@@ -89,14 +90,15 @@
         android:layout_above="@+id/regReasonSP"
         android:layout_alignStart="@+id/regReasonSP"
         android:layout_alignEnd="@+id/regReasonSP"
-        android:textColor="#999" />
+        android:textColor="#ccc"
+        android:layout_marginTop="100dp" />
 
     <TextView
         android:text="Workout Time:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView5"
-        android:textColor="#999"
+        android:textColor="#ccc"
         android:layout_below="@+id/regReasonSP"
         android:layout_alignStart="@+id/regReasonSP"
         android:layout_alignEnd="@+id/regReasonSP" />
@@ -120,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView7"
-        android:textColor="#999"
+        android:textColor="#ccc"
         android:layout_below="@+id/regTimeSP"
         android:layout_alignStart="@+id/regTimeSP"
         android:layout_alignEnd="@+id/regTimeSP" />
@@ -143,7 +145,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView10"
-        android:textColor="#999"
+        android:textColor="#ccc"
         android:layout_below="@+id/regMotivationSP"
         android:layout_alignStart="@+id/regMotivationSP"
         android:layout_alignEnd="@+id/regMotivationSP" />
