--- a/Olympiad/app/src/main/res/layout/fragment_search.xml
+++ b/Olympiad/app/src/main/res/layout/fragment_search.xml
@@ -3,6 +3,7 @@
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fastScrollEnabled="true"
     tools:context="upscaleapps.olympiad.Search.SearchFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -11,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#24242F"
+        android:fastScrollEnabled="true"
         android:weightSum="1">
 
         <Spinner
@@ -25,6 +27,7 @@
             android:id="@+id/profiles_list_view"
             android:layout_toEndOf="@+id/spinner"
             android:layout_marginTop="50dp"
+            android:fastScrollEnabled="true"
             android:layout_height="match_parent"
             android:layout_width="match_parent">
         </ListView>
@@ -38,6 +41,7 @@
         <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
