--- a/Olympiad/app/src/main/res/layout/toolbar_layout.xml
+++ b/Olympiad/app/src/main/res/layout/toolbar_layout.xml
@@ -8,6 +8,7 @@
     android:minHeight="?attr/actionBarSize"
     android:fitsSystemWindows="true"
     android:id="@+id/toolbar"
+    android:fastScrollEnabled="true"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:gravity="center_vertical|center">
 
